--- a/src/Components/CardProd/cardProd.css
+++ b/src/Components/CardProd/cardProd.css
@@ -8,10 +8,14 @@
 }
 .imgProd{
   width: 90%;
+  border-radius: 20px;
 }
 .cardProd:hover .imgProd{
   transition: transform .2s;
   transform: scale(1.3) rotate(3deg);
+}
+.contText{
+  z-index: 1;
 }
 
 .CardProdTitle {
@@ -30,5 +34,4 @@
 }
 .CardProdDesc{
     text-align: justify;
-    text-indent: 15px;
   }
