--- a/src/Pages/Contact/contact.css
+++ b/src/Pages/Contact/contact.css
@@ -38,7 +38,7 @@
 
 .IconContact{
   color: white;
-  font-size: 60px;
+  font-size: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,7 +46,7 @@
 }
 .IconContact:hover{
   border-radius: 20px;
-  font-size: 60px;
+  font-size: 40px;
 }
 
 .facebook:hover{
